# pangocairocffi

./: .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  NEWS.rst  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  coverage.yml  lint.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  modules.rst  overview.rst  pangocairocffi.rst  requirements.txt  tests.rst
pangocairocffi/: __init__.py  c_definitions_cairo.txt  c_definitions_glib.txt  c_definitions_pango.txt  c_definitions_pangocairo.txt  create_update_functions.py  ffi_build.py  ffi_pango.py  font_functions.py  font_map.py  render_functions.py
tests/: test_end_to_end.py  test_error_underline.py  test_extents.py  test_extents_test.py  test_font_map.py  test_glyph_item.py
