[metadata]
name = pangocairocffi
url = https://github.com/leifgehrmann/pangocairocffi
version = file: pangocairocffi/VERSION
license = LGPL-2.1
license_file = LICENSE
description = CFFI-based pango-cairo bindings for Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Leif Gehrmann
keywords =
  pango
  cairo
  cffi
  binding
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics
  Topic :: Text Processing :: Fonts
project_urls =
  Code = https://github.com/leifgehrmann/pangocairocffi
  Issue tracker = https://github.com/leifgehrmann/pangocairocffi/issues

[options]
packages = find:
setup_requires =
  cffi >= 1.1.0
  pangocffi >= 0.4.0
  setuptools
install_requires =
  cffi >= 1.1.0
  cairocffi >= 1.0.2
  pangocffi >= 0.4.0
python_requires = >= 3.5
include_package_data = True
zip_safe = False

[aliases]
test=pytest
