[metadata]
name = pangocairocffi
version = file: pangocairocffi/VERSION
url = https://github.com/leifgehrmann/pangocairocffi
license = LGPL-2.1
license_file = LICENSE
description = CFFI-based pango-cairo bindings for Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Leif Gehrmann
keywords =
  pango
  cairo
  cffi
  binding
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Multimedia :: Graphics
  Topic :: Text Processing :: Fonts
project_urls =
  Code = https://github.com/leifgehrmann/pangocairocffi
  Issue tracker = https://github.com/leifgehrmann/pangocairocffi/issues

[options]
packages = find:
setup_requires =
  setuptools
install_requires =
  cffi >= 1.1.0
  cairocffi >= 1.0.2
  pangocffi >= 0.8.0
python_requires = >= 3.6
include_package_data = True

[options.package_data]
pangocairocffi = VERSION, *.txt

[options.packages.find]
exclude = pangocairocffi._generated, tests

[aliases]
test=pytest
